V. 2.0beta. Основные изменения: 1) уменьшено потребление памяти, 2) повышена надежность

--- a/geowidsrv/web/style/leaflet.css
+++ b/geowidsrv/web/style/leaflet.css
@@ -12,7 +12,7 @@
 .leaflet-overlay-pane svg,
 .leaflet-zoom-box,
 .leaflet-image-layer,
-.leaflet-layer { /* TODO optimize classes */
+.leaflet-layer {
 	position: absolute;
 	}
 .leaflet-container {
